# coinstacks/ethereum/api/src/routes.ts
@@ -27,6 +27,7 @@ const models: TsoaRoute.Models = {
         "properties": {
             "balance": {"dataType":"string","required":true},
             "pubkey": {"dataType":"string","required":true},
+            "path": {"dataType":"string"},
             "nonce": {"dataType":"double","required":true},
             "tokens": {"dataType":"array","array":{"ref":"Token"},"required":true},
         },
@@ -62,15 +63,15 @@ const models: TsoaRoute.Models = {
         "dataType": "refObject",
         "properties": {
             "txid": {"dataType":"string","required":true},
-            "status": {"dataType":"string","required":true},
+            "status": {"dataType":"string"},
             "blockHash": {"dataType":"string"},
             "blockHeight": {"dataType":"double"},
             "confirmations": {"dataType":"double"},
             "timestamp": {"dataType":"double"},
-            "from": {"dataType":"string","required":true},
+            "from": {"dataType":"string"},
             "to": {"dataType":"string"},
             "value": {"dataType":"string","required":true},
-            "fee": {"dataType":"string","required":true},
+            "fee": {"dataType":"string"},
         },
         "additionalProperties": false,
     },
